--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>storm</groupId>
             <artifactId>storm</artifactId>
-            <version>0.9.0-wip7</version>
+            <version>0.8.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
